# libxr

./: .gdbinit  .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  bench.h  client.c  configure.ac  libxr.SlackBuild  libxr.pc.in  server.c  test.c  win32-build.sh  xdl.syntax  xml.h  xmlrpc-call.c  xmlrpc-call.h  xmlrpc-client.c  xmlrpc-client.h  xmlrpc-server.c  xmlrpc-server.h  xmlrpc-value.c  xmlrpc-value.h  xmlrpc.c  xmlrpc.h
docs/: Doxyfile  Makefile.am  index.doc
include/: Makefile.am  xr-call.h  xr-client.h  xr-http.h  xr-lib.h  xr-server.h  xr-value-utils.h  xr-value.h
lib/: Makefile.am  xml-priv.h  xr-call-json-rpc.c  xr-call-xml-rpc.c  xr-call.c  xr-client.c  xr-http.c  xr-http.h  xr-lib.c  xr-server.c  xr-utils.c  xr-utils.h  xr-value-utils.c  xr-value.c
m4/: with_pkg.m4
misc/: Makefile.am  README  xdl.vim
pkgconfig/: libxr-uninstalled.pc.in
tests/: .gdbinit  Makefile.am  bench.h  client.c  leak-test-client.sh  leak-test-server.sh  leak.supp  mlserver.c  server.c  session-client.c  session-client.py  t-xdl-compiler1.sh  tclient.c  test.c  test.xdl  test.xri  value-utils-test.c
tests/unit/: Makefile.am  phony-lib.c  t001-call.c  t001-http.c  t002-call.c  tests.h
tests/vala/: Makefile.am  test-vala.sh  test.vala  test.xdl
tests/zblok/: Makefile.am  build.sh  client.c  server.c  zblok.xdl
xdl-compiler/: Makefile.am  main.c  parser-lib.c  parser-lib.h  parser.y  scanner.l  xdl-compiler.1  xdl-parser.yre  xdl.c  xdl.h  xri.c  xri.h
